修改命名空间

--- a/Zhaopin.ExchangeApi/ExchangeApi.csproj
+++ b/Zhaopin.ExchangeApi/ExchangeApi.csproj
@@ -13,8 +13,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Zhaopin.ExchangeApi</RootNamespace>
-    <AssemblyName>Zhaopin.ExchangeApi</AssemblyName>
+    <RootNamespace>ExchangeApi</RootNamespace>
+    <AssemblyName>ExchangeApi</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
@@ -33,7 +33,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Zhaopin.ExchangeApi.XML</DocumentationFile>
+    <DocumentationFile>bin\ExchangeApi.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
